# QtPieISA

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/qtpie/: CMakeLists.txt  main.cpp
config/: isa_config.xml
lib/: CMakeLists.txt
lib/isa/: CMakeLists.txt
lib/isa/include/isa/: alu.hpp  config_parser.hpp  decoder.hpp  instructions.hpp  mainwindow.hpp  register.hpp
lib/isa/src/: config_parser.cpp  decoder.cpp  instructions.cpp  mainwindow.cpp  mainwindow.ui
